added preprint of software citation principles paper

--- a/SC-challenge.bib
+++ b/SC-challenge.bib
@@ -458,7 +458,7 @@
 	Journal = {PeerJ Computer Science},
 	Keywords = {Data citation, Machine accessibility, Data archiving, Data accessibility},
 	Month = {5},
-	Dou = {10.7717/peerj-cs.1},
+	Doi = {10.7717/peerj-cs.1},
 	Pages = {e1},
 	Title = {Achieving human and machine accessibility of cited data in scholarly publications},
 	Volume = {1},
@@ -531,14 +531,13 @@
 	Title = {Joint Declaration of Data Citation Principles},
 	Year = {2014}}
 
-@misc{SoftwareCitation2016,
-	Author = {{FORCE11 Software Citation Working Group}},
-	Date-Modified = {2016-03-23 18:02:37 +0000},
-	Dskeditor = {Arfon M. Smith and Daniel S.\ Katz and Kyle E.\ Niemeyer},
-	Howpublished = {\LaTeX\ source available at \url{https://github.com/force11/force11-scwg/tree/master/sc-principles}},
-	Note = {Arfon M. Smith, Daniel S.\ Katz, and Kyle E.\ Niemeyer, Editors. Draft document, Accessed: 2016-03-23},
-	Publisher = {FORCE11},
+@article{SoftwareCitation2016,
+	Author = {Arfon M Smith and Daniel S Katz and Kyle E Niemeyer and {FORCE11 Software Citation Working Group}},
 	Title = {Software Citation Principles},
+    Journal = {PeerJ Preprints},
+    Volume = {4},
+    Pages = {e2169v1},
+    Doi = {10.7287/peerj.preprints.2169v1},
 	Year = {2016}}
 
 @misc{SCWG,
