--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -184,12 +184,9 @@ As a first step towards sustainable, reusable, and attributable software, effort
 
 Multiple organizations, including the WSSSPE Software Credit working group~[\citeNP{WSSSPE1};\citeyearNP{WSSSPE2};\citeyearNP{WSSSPE3}] and FORCE11 Software Citation Working Group~\cite{SoftwareCitation2016}, are working to standardize software citation practices.
 Some of the observations and recommendations made here come from their efforts, which follow similar work by DataCite and the~\citeN{DataCitation2014} to standardize research data citation practices.
+More detail on these efforts, as well as broader related work by the community, can be found in the declaration of Software Citation Principles~\cite{SoftwareCitation2016}.
 Currently, services including Zenodo and figshare allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, figshare, Zenodo).
-
-In recognition of the general desire to improve software citation rates, funders and agencies in the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at discussing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
-In many cases these workshops produced strong recommendations for their respective communities on how best to proceed.
-In addition, a number of common themes arose in these workshops, including (1) the critical need for making software more ``citable'' (and therefore actions authors and publishers should take to improve the status quo), (2) how to better measure the impact of software (and therefore attract appropriate funding), and (3) how to properly archive software (where, how, and how often) and how this affects what to cite and when.
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}, 
