trying without sentence on Zenodo/figshare

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -184,15 +184,8 @@ As a first step towards sustainable, reusable, and attributable software, effort
 
 Multiple organizations, including the WSSSPE Software Credit working group~[\citeNP{WSSSPE1};\citeyearNP{WSSSPE2};\citeyearNP{WSSSPE3}] and FORCE11 Software Citation Working Group~\cite{SoftwareCitation2016}, are working to standardize software citation practices.
 Some of the observations and recommendations made here come from their efforts, which follow similar work by DataCite and the~\citeN{DataCitation2014} to standardize research data citation practices.
-More detail on these efforts, as well as broader related work by the community, can be found in the declaration of Software Citation Principles~\cite{SoftwareCitation2016}.
-Currently, services including Zenodo and figshare allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
-
-Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
-In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}, 
-though this is not a machine-readable solution.
-Another proposal is transitive credit via \mbox{JSON-LD}~\cite{Katz:2015aa}, which assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
-Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
-The related PaperBadger project~\cite{PaperBadger} creates digital contributor badges associated with each Project CRediT role, connecting publications with people via DOI and ORCID, respectively.
+More detail on these efforts, as well as broader related work by the community aimed at both citation and credit for software, can be found in the declaration of Software Citation Principles~\cite{SoftwareCitation2016}.
+%Currently, services including Zenodo and figshare allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
 
 Even with an adopted, standard method for software citation, indexers (e.g., Web of Science, Scopus, Google Scholar) currently lack support for indexing such citations.
 The astrophysics community represents one possible exception to this, where the independent, community-run service NASA ADS~\cite{nasaads} also carries out indexing of citations.
