minor shortening edits

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -174,7 +174,7 @@ Furthermore, some research communities have not yet adopted open-source mentalit
 Questions also remain about the role of curating\slash reviewing software---if software will be cited in the same manner as a publication, is quality assessment needed (e.g., peer code review)?
 If so, how, when, and by whom?
 
-\textbf{The main challenge of software citation is that we need a way to uniquely identify released\slash published software so that it can be cited by others who use it.}
+\textbf{The main challenge of software citation is the lack of a way to uniquely identify released\slash published software, so those who use it can cite it.}
 We also need a process to curate and review software.
 As a first step towards sustainable, reusable, and attributable software, efforts are underway to establish citation practices for software used in research.
 
@@ -188,10 +188,10 @@ More detail on these efforts, as well as broader related work by the community a
 %Currently, services including Zenodo and figshare allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
 
 Even with an adopted, standard method for software citation, indexers (e.g., Web of Science, Scopus, Google Scholar) currently lack support for indexing such citations.
-The astrophysics community represents one possible exception to this, where the independent, community-run service NASA ADS~\cite{nasaads} also carries out indexing of citations.
+The astrophysics community represents a possible exception, where the community-run service NASA ADS~\cite{nasaads} also carries out indexing of citations.
 The ADS already indexes references to software listed in the Astrophysics Source Code Library~\citeyear{ascl}, and has made a commitment to expand upon this functionality following an AAS\slash GitHub-sponsored meeting~\cite{aas-software-index}.
 
-Finally, on the topic of peer review of software, there is a distinct lack of standardization around the practices of peer review.
+Finally, peer review of software distinctly lacks a standard practice.
 Some journals that accept both ``software'' submissions and general research papers can conflate review of the submitted software with a review of research output \textbf{produced by} the software.
 Software-only journals (e.g., \textit{Journal of Open Research Software}, \textit{SoftwareX}) and the rOpenSci community represent exceptions to this, with documented review processes.
 For example, rOpenSci has a process \cite{rOpenSci-reviews} used to determine whether a package can become part of the rOpenSci collection.
