--- a/SC-challenge.bib
+++ b/SC-challenge.bib
@@ -648,7 +648,7 @@
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and others},
 	Date-Added = {2016-01-11 21:38:20 +0000},
 	Date-Modified = {2016-03-23 01:05:41 +0000},
-	Note = {Under review. {\tt \href{http://arxiv.org/abs/1602.02296}{arXiv:1602.02296} [cs.SE]}},
+	Note = {{\tt \href{http://arxiv.org/abs/1602.02296}{arXiv:1602.02296} [cs.SE]}},
 	Title = {Report on the Third Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE3)}},
 	Year = {2016}}
 
@@ -733,7 +733,6 @@
  volume={18},
  issue={3},
  year={2015},
- month={Summer},
  doi={10.3998/3336451.0018.308},
  journal={J. Electronic Publishing},
 }
