--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -244,7 +244,7 @@ In other words, if using different software could produce different data or resu
 
 However, research and development efforts are needed to solve the remaining challenges.
 These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the software itself is not publicly preserved?
-Software citations require indexing to create a citation network akin to publications to carry weight for academic credit and reputation, so how can index services (e.g., Web of Science, Scopus, Google Scholar) be encouraged to fully index software?
+Software citations require indexing to create a citation network akin to publications to carry weight for academic credit and reputation, so how can index services be encouraged to fully index software?
 How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors---should such a citation be ``weighted'' higher than others?
 The \citeN{AAS:2016} suggests a new ``Software'' section below the acknowledgements; other approaches include machine-readable supplementary data~\cite{Katz:2015aa}.
 
