--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -213,7 +213,7 @@ Identify necessary metadata associated with software for citation &
 We suggest metadata below, and the CodeMeta project~\cite{CodeMeta} is working to determine minimal metadata. \\
 
 Standardize proper formats for citing software in publications &
-The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in July 2016) a follow-on group will initiate implementation activities. \\
+The FORCE11 Software Citation Working Group is defining, and gaining community acceptance for, software citation principles, after which a follow-on group will begin implementation efforts. \\
 
 Establish mechanisms for software to cite other software (i.e., dependencies) &
 Software publication as software papers allows this. For software that is directly published, this is an open challenge.\\ % with no obvious path forward \\
