shortened a few more places
Reduced CodeMeta author list to just Carli and others. Sorry, Matt...

--- a/SC-challenge.bib
+++ b/SC-challenge.bib
@@ -558,7 +558,7 @@
 
 @misc{CodeMeta,
 	OLDAuthor = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel and Abby Mayes and Kyle Niemeyer and Jennifer Lin and Alice Allen and Merc\`{e} Crosas and Ashley Sands and Neil Chue Hong},
-	Author = {Carl Boettiger and Matt Jones and others},
+	Author = {Carl Boettiger and others},
 	Date-Added = {2016-01-12 08:53:31 +0000},
 	Date-Modified = {2016-01-13 07:19:34 +0000},
 	Howpublished = {\url{http://codemeta.github.io/}},
