--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -142,7 +142,7 @@ DANIEL S. KATZ
 \begin{bottomstuff}
 Work by K.\ E.\ Niemeyer was supported in part by the National Science Foundation (NSF) under grant ACI-1535065.
 Work by D.\ S.~Katz was supported by the NSF while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF.
-Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manufacturing Engineering, Oregon State University;
+Author's addresses: K.\ E.\ Niemeyer, School of MIME, Oregon State University;
 A.\ M.\ Smith,
 GitHub, Inc.;
 D.\ S.\ Katz,
@@ -242,8 +242,8 @@ In arguing the need for software citation, we simultaneously introduce the quest
 Although there is no clear answer to this question, ensuring reproducibility of research results requires citation of software if used directly and important to research results.
 In other words, if using different software could produce different data or results, then the software used should be cited.
 
-However, research and development efforts are needed to solve the remaining challenges.
-These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the software itself is not publicly preserved?
+Research and development efforts are needed to solve the remaining challenges.
+These include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the software itself is not publicly preserved?
 Software citations require indexing to create a citation network akin to publications to carry weight for academic credit and reputation, so how can index services be encouraged to fully index software?
 How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors---should such a citation be ``weighted'' higher than others?
 The \citeN{AAS:2016} suggests a new ``Software'' section below the acknowledgements; other approaches include machine-readable supplementary data~\cite{Katz:2015aa}.
