--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -10,7 +10,7 @@
 % Steps to compile: latex, bibtex, latex latex
 %
 % For tracking purposes => this is v1.3 - March 2012
-
+\pdfoutput=1
 \documentclass[prodmode,acmjdiq]{acmsmall} % Aptara syntax
 
 \usepackage[utf8]{inputenc}
