adding new copyright etc info

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -45,18 +45,18 @@
 % Metadata Information
 \acmVolume{V}
 \acmNumber{N}
-\acmArticle{A}
-\acmYear{YYYY}
+\acmArticle{XXXX}
+\acmYear{2016}
 \acmMonth{0}
 
 % Copyright
-\setcopyright{rightsretained}
+\setcopyright{licensedusgovmixed}
 
 % DOI
 \doi{0000001.0000001}
 
 %ISSN
-\issn{1234-56789}
+\issn{1936-1955/2016}
 
 % Document starts
 \begin{document}
@@ -122,6 +122,7 @@ DANIEL S. KATZ
 %
 % End generated code
 %
+
 
 \terms{Documentation, Standardization}
 
